# cs_greedy_emulator

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  SCM_playground.ipynb  analysis.ipynb  chiral.ipynb  chiral_mpi.ipynb  cpot.pxd  cpot.pyx  figures.ipynb  main.cpp  main.py  minnesota.ipynb  newstart.ipynb  notes.ipynb  notes_numerov.ipynb  requirements.txt  setup.py  testing.ipynb  tests.ipynb  tests.py
data/: localGT+_lecs_order_0_R0_0.8_lam_1000.yaml  localGT+_lecs_order_0_R0_0.8_lam_1200.yaml  localGT+_lecs_order_0_R0_0.8_lam_1400.yaml  localGT+_lecs_order_0_R0_0.8_lam_800.yaml  localGT+_lecs_order_0_R0_0.9_lam_1000.yaml  localGT+_lecs_order_0_R0_0.9_lam_1200.yaml  localGT+_lecs_order_0_R0_0.9_lam_1400.yaml  localGT+_lecs_order_0_R0_0.9_lam_800.yaml  localGT+_lecs_order_0_R0_1.0_lam_1000.yaml  localGT+_lecs_order_0_R0_1.0_lam_1200.yaml  localGT+_lecs_order_0_R0_1.0_lam_1400.yaml  localGT+_lecs_order_0_R0_1.0_lam_800.yaml  localGT+_lecs_order_0_R0_1.1_lam_1000.yaml  localGT+_lecs_order_0_R0_1.1_lam_1200.yaml  localGT+_lecs_order_0_R0_1.1_lam_1400.yaml  localGT+_lecs_order_0_R0_1.1_lam_800.yaml  localGT+_lecs_order_0_R0_1.2_lam_1000.yaml  localGT+_lecs_order_0_R0_1.2_lam_1200.yaml  localGT+_lecs_order_0_R0_1.2_lam_1400.yaml  localGT+_lecs_order_0_R0_1.2_lam_800.yaml  localGT+_lecs_order_1_R0_0.9_lam_1000.yaml  localGT+_lecs_order_1_R0_0.9_lam_1200.yaml  localGT+_lecs_order_1_R0_0.9_lam_1400.yaml  localGT+_lecs_order_1_R0_0.9_lam_800.yaml  localGT+_lecs_order_1_R0_1.0_lam_1000.yaml  localGT+_lecs_order_1_R0_1.0_lam_1200.yaml  localGT+_lecs_order_1_R0_1.0_lam_1400.yaml  localGT+_lecs_order_1_R0_1.0_lam_800.yaml  localGT+_lecs_order_1_R0_1.1_lam_1000.yaml  localGT+_lecs_order_1_R0_1.1_lam_1200.yaml  localGT+_lecs_order_1_R0_1.1_lam_1400.yaml  localGT+_lecs_order_1_R0_1.1_lam_800.yaml  localGT+_lecs_order_1_R0_1.2_lam_1000.yaml  localGT+_lecs_order_1_R0_1.2_lam_1200.yaml  localGT+_lecs_order_1_R0_1.2_lam_1400.yaml  localGT+_lecs_order_1_R0_1.2_lam_800.yaml  localGT+_lecs_order_2_R0_0.8_lam_1000.yaml  localGT+_lecs_order_2_R0_0.8_lam_1200.yaml  localGT+_lecs_order_2_R0_0.8_lam_800.yaml  localGT+_lecs_order_2_R0_0.9_lam_1000.yaml  (+16 more)
data/phaseshifts/N2LO_fulllocal_R0_1.0_lam_50.0_Np_54/: README.md
data/phaseshifts/nn-online/: PWA93-1D2-np.txt  PWA93-1D2-pp.txt  PWA93-1F3-np.txt  PWA93-1G4-np.txt  PWA93-1G4-pp.txt  PWA93-1H5-np.txt  PWA93-1I6-np.txt  PWA93-1I6-pp.txt  PWA93-1J7-np.txt  PWA93-1K8-np.txt  PWA93-1P1-np.txt  PWA93-1S0-np.txt  PWA93-1S0-pp.txt  PWA93-3D1-np.txt  PWA93-3D2-np.txt  PWA93-3D3-np.txt  PWA93-3F2-np.txt  PWA93-3F2-pp.txt  PWA93-3F3-np.txt  PWA93-3F3-pp.txt  PWA93-3F4-np.txt  PWA93-3F4-pp.txt  PWA93-3G3-np.txt  PWA93-3G4-np.txt  PWA93-3G5-np.txt  PWA93-3H4-np.txt  PWA93-3H4-pp.txt  PWA93-3H5-np.txt  PWA93-3H5-pp.txt  PWA93-3H6-np.txt  PWA93-3H6-pp.txt  PWA93-3I5-np.txt  PWA93-3I6-np.txt  PWA93-3I7-np.txt  PWA93-3J6-np.txt  PWA93-3J6-pp.txt  PWA93-3J7-np.txt  PWA93-3J7-pp.txt  PWA93-3J8-np.txt  PWA93-3J8-pp.txt  (+17 more)
modules/: Channel.py  Emulator.py  Grid.py  Numerov.py  NumerovEmulator.py  Potential.py  RseSolver.py  Scattering.py  ScatteringExp.py  constants.py  figures.py  uMatrix.py
plots/: constants.py  cross_sections.ipynb  cross_sections_bands.ipynb  phase_shifts.ipynb  plot_helper.py  rc_params.py
src/: Emulator.cpp  Emulator.h  Grid.cpp  Grid.h  Makefile_cubature_repl  localGt+.cpp  localGt+.h  solveRSE.cpp  solveRSE.h
